Fixed alignment on Support center

--- a/src/views/Info/Help.css
+++ b/src/views/Info/Help.css
@@ -5,6 +5,7 @@
     margin: 30px 0px;
     text-transform: uppercase;
     line-height: 1.3;
+    padding: 20px;
 }
 
 .help-header img {
